--- a/b2g/config/emulator/config.json
+++ b/b2g/config/emulator/config.json
@@ -9,7 +9,7 @@
         "{workdir}/out/target/product/generic/*.tar.bz2",
         "{workdir}/out/target/product/generic/tests/*.zip",
         "{workdir}/out/emulator.tar.gz",
-        {"{objdir}/dist/b2g-*.crashreporter-symbols.zip": "emulator.crashreporter-symbols.zip"},
+        "{objdir}/dist/b2g-*.crashreporter-symbols.zip",
         "{workdir}/sources.xml"
     ],
     "gecko_l10n_root": "http://hg.mozilla.org/l10n-central",
